--- a/RaidLog/Views/Home/Index.cshtml
+++ b/RaidLog/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Durandal Starter Kit</title>
+        <title>Project RAID Logs</title>
         
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
@@ -27,6 +27,7 @@
                 document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
             }
         </script>
+
     </head>
     <body>
         <main id="applicationHost" aria-role="main">
