Noodling with Risk List/Details

--- a/RaidLog/App/views/projectList.html
+++ b/RaidLog/App/views/projectList.html
@@ -25,7 +25,7 @@
             <tr>
                 <td><a data-bind="text: $data.code, click:$root.viewProject"></a></td>
                 <td data-bind="text: $data.name"></td>
-                <td class="narrowCount" data-bind="text: $data.activeRisks">0</td>
+                <td class="narrowCount" data-bind="text: $data.activeRisks,click:$root.viewRisks">0</td>
                 <td class="narrowCount" data-bind="text: $data.activeAssumptions">0</td>
                 <td class="narrowCount" data-bind="text: $data.activeIssues">0</td>
                 <td class="narrowCount" data-bind="text: $data.activeDependencies">0</td>
