Trying the latest w-i-p of DT1.10

--- a/RaidLog/App/views/projectList.html
+++ b/RaidLog/App/views/projectList.html
@@ -14,11 +14,21 @@
                 <th colspan="5">Open Items</th>
             </tr>   
             <tr>
-                <th>R</th>
-                <th>A</th>
-                <th>I</th>
-                <th>D</th>
-                <th>Q</th>
+                <th>
+                    <abbr title="Risks">R</abbr>
+                </th>
+                <th>
+                    <abbr title="Assumptions">A</abbr> 
+                </th>
+                <th>
+                    <abbr title="Issues">I</abbr>
+                </th>
+                <th>
+                    <abbr title="Dependencies">D</abbr>
+                </th>
+                <th>
+                    <abbr title="Queries">Q</abbr>
+                </th>
             </tr>   
         </thead>
         <tbody data-bind="foreach:projects">
