--- a/RaidLog.Web/App/views/shell.html
+++ b/RaidLog.Web/App/views/shell.html
@@ -3,7 +3,7 @@
         <div class="navbar-inner">
             <a class="brand" data-bind="attr: { href: router.navigationModel()[0].hash }">
                 <i class="icon-home"></i>
-                <span>Durandal</span>
+                <span>RAID Logs</span>
             </a>
             <ul class="nav" data-bind="foreach: router.navigationModel">
                 <li data-bind="css: { active: isActive }">
@@ -14,12 +14,12 @@
                 <i class="icon-spinner icon-2x icon-spin"></i>
             </div>
             <form class="navbar-search pull-right" data-bind="submit:search">
-                <input type="text" class="search-query" placeholder="Search">
+                <input type="text" class="search-query" placeholder="Search" data-bind="enabled:canSearch,value:searchField">
             </form>
         </div>
     </div>
     
     <div class="container-fluid page-host">
-        <!--ko router: { transition:'entrance', cacheViews:true }--><!--/ko-->
+        <!--ko router: { transition:'entrance', cacheViews:false }--><!--/ko-->
     </div>
 </div>
