Rendering problem solved!
The problem turned out to be the calls to document.write in the pagedGrid.ts file - which were overwriting the doc, rather than just appending <script> elements to it. Now I have some more mundane problems to solve...

--- a/RaidLog.Spa/App/views/shell.html
+++ b/RaidLog.Spa/App/views/shell.html
@@ -20,6 +20,6 @@
     </div>
     
     <div class="container-fluid page-host">
-        <!--ko router: { transition:'entrance', cacheViews:true }--><!--/ko-->
+        <!--ko router: { transition:'entrance', cacheViews:false }--><!--/ko-->
     </div>
 </div>
