Almost there... just need to sort out the pagedGrid binding

--- a/RaidLog.Spa/App/views/projectList.html
+++ b/RaidLog.Spa/App/views/projectList.html
@@ -5,7 +5,7 @@
             <button class="btn"><i class="icon-edit icon-white" />Edit Project</button><br />
             <button class="btn btn-danger"><i class="icon-remove icon-white"/>Archive Project</button> 
         </div>
-        <div class="span11" data-bind="pagedGrid:listViewModel,gridTemplateName:projectListTemplate"></div>
+        <div class="span11" data-bind="pagedGrid:listViewModel,gridTemplateName:'projectListTemplate'"></div>
     </div>
 </section>
 
