--- a/RaidLog.Spa/Views/Durandal/Index.cshtml
+++ b/RaidLog.Spa/Views/Durandal/Index.cshtml
@@ -50,7 +50,7 @@
 </table>  
         </script>
         <script id="ko_simpleGrid_pageLinks" type="text/html">
-<div class="ko_grid_pageLinks">
+<div class="ko_grid_pageLinks" data-bind="visible:maxPageIndex > 0">
     <span>Page:</span>
     <!-- ko foreach: ko.utils.range(0, maxPageIndex) -->
     <a href="#" data-bind="text: $data + 1, click: function() { $root.currentPageIndex($data) }, css: { selected: $data == $root.currentPageIndex() }">
