riskList screen almost sorted out - time to integrate it!

--- a/RaidLog.Spa/Content/site.css
+++ b/RaidLog.Spa/Content/site.css
@@ -61,3 +61,7 @@ tbody > tr.selected > td {
     background-color: palegoldenrod !important;
 }
 
+.closedItem {
+    text-decoration: solid darkred line-through;
+}
+
