--- a/RaidLog.Spa/App/views/riskList.html
+++ b/RaidLog.Spa/App/views/riskList.html
@@ -3,7 +3,7 @@
     <div class="span6">
         <div class="btn-group">
             <button class="btn" data-bind="click:newRisk"><i class="icon-plus-sign icon-white"></i> Add New Risk</button>
-            <button class="btn" data-bind="click:refreshRisks"><i class="icon-refresh icon-white"></i> Refresh</button>
+            <button class="btn" data-bind="click:refresh"><i class="icon-refresh icon-white"></i> Refresh</button>
         </div>
         <div id="riskListContainer" data-bind="simpleGrid:risks,simpleGridTemplate:riskListTemplate">
         </div>
