Couple of misc changes

--- a/RaidLog.Spa/App/views/riskList.html
+++ b/RaidLog.Spa/App/views/riskList.html
@@ -107,7 +107,7 @@ leading to ...</textarea>
             </div>
 
             <div>
-                <button data-bind="click: $root.save, enable: $root.canSave" class="btn btn-primary" accesskey="s"><i class="icon-save icon-white"/> Save</button>
+                <button data-bind="click: save, enable: canSave" class="btn btn-primary" accesskey="s"><i class="icon-save icon-white"/> Save</button>
             </div>
             
 
