Completed Risks screen.

--- a/RaidLog.Spa/Content/site.css
+++ b/RaidLog.Spa/Content/site.css
@@ -65,3 +65,26 @@ tbody > tr.selected > td {
     text-decoration: solid darkred line-through;
 }
 
+
+.selectedPage {
+    background-color: palegoldenrod;
+    border: 1px solid darkslategray;
+    font-size: larger;
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
+.ragAmber {
+    color: darkorange;
+    font-size: larger;
+}
+
+.ragGreen {
+    color: green;
+}
+
+.ragRed {
+    color: red;
+    font-size: larger;
+    font-weight: bolder;
+}
