--- a/RaidLog.Spa/App/views/riskList.html
+++ b/RaidLog.Spa/App/views/riskList.html
@@ -11,30 +11,34 @@
     </div>
     
     
-    <div class='span6 well' data-bind='with: listViewModel.selected, visible: $data != null, validationOptions: {insertMessages:true,errorMessageClass:""}'>
+    <div class='span6 well' data-bind='with: listViewModel.selected,visible:$data != null, validationOptions: {insertMessages:true}'>
         <form class="form-horizontal">
             <!-- Description -->
-            <div class="control-group">
+            <div class="control-group" data-bind="css:{error: !description.isValid()}">
                 <label class="control-label" for="description" accesskey="D">Description</label>
                 <div class="controls">                     
-                    <textarea id="description" name="description" data-bind="value: description" class="input-xlarge" rows="5" cols="40">There is a risk that...
+                    <textarea id="description" name="description" data-bind="value: description" class="input-block-level" rows="3">There is a risk that...
 because ...
 leading to ...</textarea>
                 </div>
             </div>
             
-            <div class="control-group">
-                <label class="control-label" for="raisedDate">Raised On</label>
+        <div class="control-group" data-bind="css:{error: !raisedDate.isValid}">
+            <label class="control-label" for="raisedDate">Raised On</label>
+            <div class="controls">
+                <input id="raisedDate" name="raisedDate" type="text" 
+                       placeholder="yyyy-mm-dd" class="input-small" required="required" data-bind="value: raisedDate, enabled: id === 0"/>
+            </div>
+        </div>
+            <div class="control-group" data-bind="css:{error: !raisedBy.isValid()}">
+                <label class="control-label" for="raisedBy">Raised By</label>
                 <div class="controls">
-                    <input id="raisedDate" name="raisedDate" type="text" placeholder="yyyy-mm-dd" class="input-small" required="required" data-bind="value: raisedDate, enabled: id === 0">
-                
-                    Raised By
-                
                     <input id="raisedBy" name="raisedBy" type="text" placeholder="Some User"
                            data-bind="value: raisedBy, enabled:id === 0"
-                           class="input-xlarge" required="required">
+                           class="input-xlarge" required="required"/>
                 </div>
             </div>
+            
 
             <!-- Select Basic -->
             <div class="control-group">
@@ -49,7 +53,7 @@ leading to ...</textarea>
 
             <!-- Prepended checkbox -->
             <div class="control-group">
-                <label class="control-label" for="workstream">Project Risk? / Workstream</label>
+                <label class="control-label" for="workstream">Proj Risk?/Workstream</label>
                 <div class="controls">
                     <div class="input-prepend">
                         <span class="add-on">
@@ -64,7 +68,7 @@ leading to ...</textarea>
 
             <!-- Select Basic -->
             <div class="control-group">
-                <label class="control-label" for="approachId">Approach</label>
+                <label class="control-label" for="approachId" accesskey="a">Approach</label>
                 <div class="controls">
                     <select id="approachId" 
                             name="approachId" 
@@ -76,26 +80,29 @@ leading to ...</textarea>
             
             <!-- Select Basic -->
             <div class="control-group">
-                <label class="control-label" for="likelihoodId">Likelihood</label>
+                <label class="control-label" for="likelihoodId" accesskey="l">Likelihood</label>
                 <div class="controls">
                     <select id="likelihoodId" 
                             name="likelihoodId" 
                             class="input-large" 
                             data-bind="value: likelihoodId, options: $root.likelihoods, optionsText: 'description', optionsCaption: 'Choose...', optionsValue: 'id'">
                     </select>
-                    &nbsp;Impact&nbsp;
-                    <select id="impactId" 
-                            name="impactId" 
-                            class="input-large" 
-                            data-bind="value: impactId, options: $root.impacts, optionsText: 'description', optionsCaption: 'Choose...', optionsValue: 'id'">
-                    </select>
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="impactId" accesskey="i">Impact</label>
+                <div class="controls"><select id="impactId" 
+                                              name="impactId" 
+                                              class="input-large" 
+                                              data-bind="value: impactId, options: $root.impacts, optionsText: 'description', optionsCaption: 'Choose...', optionsValue: 'id'">
+                                      </select>
                 </div>
             </div>
 
             <div class="control-group">
                 <label class="control-label" for="commentary">Impact Commentary</label>
                 <div class="controls">                     
-                    <textarea id="commentary" name="commentary" class="input-xlarge" rows="5" data-bind="value: commentary"></textarea>
+                    <textarea id="commentary" name="commentary" class="input-block-level" rows="3" data-bind="value: commentary"></textarea>
                 </div>
             </div>
 
