--- a/RaidLog.Spa/App/views/shell.html
+++ b/RaidLog.Spa/App/views/shell.html
@@ -28,7 +28,7 @@
 <!-- TODO: Need to work out where best to put these... -->
 
 <script id="ko_simpleGrid_grid" type="text/html">
-    <table class="ko-grid" cellspacing="0">
+    <table class="table table-striped table-bordered table-condensed">
         <thead>
             <tr data-bind="foreach: columns">
                 <th data-bind="text: headerText"></th>
@@ -42,10 +42,10 @@
     </table>  
 </script>
 <script id="ko_simpleGrid_pageLinks" type="text/html">
-    <div class="ko_grid_pageLinks" data-bind="visible: maxPageIndex > 0">
+    <div class="ko_grid_pageLinks" data-bind="visible: maxPageIndex() > 0">
         <span>Page:</span>
         <!-- ko foreach: ko.utils.range(0, maxPageIndex) -->
-        <a href="#" data-bind="text: $data + 1, click: function () { $root.currentPageIndex($data) }, css: { selected: $data == $root.currentPageIndex() }">
+        <a href="#" data-bind="text: $data + 1, click: function () { $root.currentPageIndex($data) }, css: { selectedPage: $data == $root.currentPageIndex() }">
         </a>
         <!-- /ko -->
     </div>
