--- a/RaidLog.Spa/App/views/assumptionList.html
+++ b/RaidLog.Spa/App/views/assumptionList.html
@@ -1,9 +1,35 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<h1><span data-bind="text: projectCode"></span>: <span data-bind=" text: projectName"></span> Assumptions</h1>
+<div class="row-fluid">
+    <div class="span6">
+        <div class="btn-group">
+            <button class="btn" data-bind="click: newAssumption"><i class="icon-plus-sign icon-white"></i> Add New Assumption</button>
+            <button class="btn" data-bind="click: refresh"><i class="icon-refresh icon-white"></i> Refresh</button>
+        </div>
+        <div id="assumptionListContainer" data-bind="pagedGrid: listViewModel, pagedGridTemplate: 'assumptionListTemplate'">
+        </div>
+        <h2 data-bind="visible: listViewModel.filteredData().length == 0" class="alert alert-info">No Assumptions</h2>
+    
+    </div>
+    <div class='span6 well' data-bind='with: listViewModel.selected,visible:$data != null, validationOptions: {insertMessages:true}'>
+        <!-- ko textfield:{field:description, fieldClass:'input-block-level',label:'Description' } -->
+    </div>
+</div>
+ <script id="assumptionListTemplate" type="text/html">
+    <table class='table table-bordered table-condensed table-striped'>
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Description</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody data-bind='foreach: itemsOnCurrentPage'>
+          <tr data-bind='click: $parent.setSelected, css: { selected: $data === $parent.selected() }'>
+            <td data-bind='text: assumptionNumber'></td>
+            <td data-bind='text: description'></td>
+            <td data-bind='text: status'></td>
+          </tr>
+        </tbody>
+    </table>
+</script>
+   
