TextField widget works! Now for the rest...

--- a/RaidLog.Spa/App/views/assumptionList.html
+++ b/RaidLog.Spa/App/views/assumptionList.html
@@ -11,7 +11,7 @@
     
     </div>
     <div class='span6 well' data-bind='with: listViewModel.selected,visible:$data != null, validationOptions: {insertMessages:true}'>
-        <!-- ko textfield:{field:description, fieldClass:'input-block-level',label:'Description' } -->
+        <!-- ko textfield:{field:description, fieldClass:'input-block-level',label:'Description' } --> <!-- /ko -->
     </div>
 </div>
  <script id="assumptionListTemplate" type="text/html">
