Assumption screen using widgets for laying out the bootstrap form.
Perf isn't great though, as it needs to layout the screen for each item, leading to obvious flashing when changing the selected item.

--- a/RaidLog.Spa/App/views/riskList.html
+++ b/RaidLog.Spa/App/views/riskList.html
@@ -91,11 +91,12 @@ leading to ...</textarea>
             </div>
             <div class="control-group">
                 <label class="control-label" for="impactId" accesskey="i">Impact</label>
-                <div class="controls"><select id="impactId" 
-                                              name="impactId" 
-                                              class="input-large" 
-                                              data-bind="value: impactId, options: $root.impacts, optionsText: 'description', optionsCaption: 'Choose...', optionsValue: 'id'">
-                                      </select>
+                <div class="controls">
+                    <select id="impactId" 
+                            name="impactId" 
+                            class="input-large" 
+                            data-bind="value: impactId, options: $root.impacts, optionsText: 'description', optionsCaption: 'Choose...', optionsValue: 'id'">
+                    </select>
                 </div>
             </div>
 
