--- a/RaidLog.Spa/App/views/assumptionList.html
+++ b/RaidLog.Spa/App/views/assumptionList.html
@@ -11,7 +11,16 @@
     
     </div>
     <div class='span6 well' data-bind='with: listViewModel.selected,visible:$data != null, validationOptions: {insertMessages:true}'>
-        <!-- ko textfield:{field:description, fieldClass:'input-block-level',label:'Description' } --> <!-- /ko -->
+        <!-- ko textfield:{field:assumptionNumber, fieldClass:'input-small', label:'Assumption #', enabled:false} --> <!-- /ko -->
+        <!-- ko textarea:{field:description, fieldClass:'input-block-level',label:'Description' } --> <!-- /ko -->
+        <!-- ko textfield:{field:workstream, fieldClass:'input-large',label:'Workstream'} --> <!-- /ko -->
+        <!-- ko textfield:{field:owner, fieldClass:'input-medium',label:'Owner'} --> <!-- /ko -->
+        <!-- ko textfield:{field:validatedBy, fieldClass:'input-medium',label:'Validated By'} --> <!-- /ko -->
+        <!-- ko select:{field:statusId, fieldClass:'input-medium',label:'Status', options:assumptionStatuses, optionsText:'description', optionsValue:'id' } --> <!-- /ko -->
+        
+        <div class="row-fluid">
+            <button data-bind="click:save, enable:canSave" class="btn btn-primary" accesskey="s"><i class="icon-save"></i> <em>S</em>ave</button>
+        </div>
     </div>
 </div>
  <script id="assumptionListTemplate" type="text/html">
