Further progress on Issues screen.

--- a/RaidLog.Spa/App/views/issueDetails.html
+++ b/RaidLog.Spa/App/views/issueDetails.html
@@ -1,4 +1,4 @@
-﻿<section data-bind="validationOptions: {messagesOnModified:true, insertMessages:true, errorMessageClass:'alert alert-error'}">
+﻿<section data-bind="validationOptions: {messagesOnModified:false, insertMessages:true, errorMessageClass:'alert alert-error'}">
     <div class="controls-row">
         <!-- Workstream -->
         <div class="control-group span4" data-bind="css:{error: !workstream.isValid()}">
